# proto/entropy.swagger.yaml
@@ -276,6 +276,35 @@ paths:
           type: boolean
       tags:
         - ResourceService
+  /v1beta1/resources/{urn}/labels:
+    patch:
+      operationId: ResourceService_UpdateResourceLabels
+      responses:
+        "200":
+          description: A successful response.
+          schema:
+            $ref: '#/definitions/UpdateResourceLabelsResponse'
+        default:
+          description: An unexpected error response.
+          schema:
+            $ref: '#/definitions/rpc.Status'
+      parameters:
+        - name: urn
+          in: path
+          required: true
+          type: string
+        - name: body
+          in: body
+          required: true
+          schema:
+            type: object
+            properties:
+              labels:
+                type: object
+                additionalProperties:
+                  type: string
+      tags:
+        - ResourceService
   /v1beta1/resources/{urn}/logs:
     get:
       operationId: ResourceService_GetLog
@@ -467,7 +496,7 @@ definitions:
       `NullValue` is a singleton enumeration to represent the null value for the
       `Value` type union.
 
-       The JSON representation for `NullValue` is JSON `null`.
+      The JSON representation for `NullValue` is JSON `null`.
 
        - NULL_VALUE: Null value.
   Resource:
@@ -579,6 +608,11 @@ definitions:
     properties:
       module:
         $ref: '#/definitions/Module'
+  UpdateResourceLabelsResponse:
+    type: object
+    properties:
+      resource:
+        $ref: '#/definitions/Resource'
   UpdateResourceResponse:
     type: object
     properties:
